--- a/Purchasing.Mvc/Views/Admin/ValidateChildWorkgroups.cshtml
+++ b/Purchasing.Mvc/Views/Admin/ValidateChildWorkgroups.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Purchasing.Web.Controllers.ValidateChildWorkgroupsViewModel>
+﻿@model IEnumerable<Purchasing.Mvc.Controllers.ValidateChildWorkgroupsViewModel>
 
 
 @{
