--- a/Purchasing.Mvc/Views/ConditionalApproval/Create.cshtml
+++ b/Purchasing.Mvc/Views/ConditionalApproval/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using Purchasing.Web.Controllers
-@model Purchasing.Web.Controllers.ConditionalApprovalModifyModel
+﻿@using Purchasing.Mvc.Controllers
+@model Purchasing.Mvc.Controllers.ConditionalApprovalModifyModel
 
 @{
 	ViewBag.Title = "Create Conditional Approval";
