--- a/Purchasing.Mvc/Views/ConditionalApproval/Edit.cshtml
+++ b/Purchasing.Mvc/Views/ConditionalApproval/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Purchasing.Web.Controllers.ConditionalApprovalViewModel
+﻿@model Purchasing.Mvc.Controllers.ConditionalApprovalViewModel
 
 @{
 	ViewBag.Title = "Edit Conditional Approval";
