--- a/Purchasing.Mvc/Views/ConditionalApproval/_ConditionalApprovalTypeSelects.cshtml
+++ b/Purchasing.Mvc/Views/ConditionalApproval/_ConditionalApprovalTypeSelects.cshtml
@@ -1,4 +1,4 @@
-﻿@model Purchasing.Web.Controllers.ConditionalApprovalModifyModel
+﻿@model Purchasing.Mvc.Controllers.ConditionalApprovalModifyModel
 
 @if (Model.ApprovalType == "Workgroup")
 { 
