--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Approve.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Approve.cshtml
@@ -1,16 +1,15 @@
-﻿@model Purchasing.Web.Controllers.DepartmentalAdminRequestViewModel
+﻿@model Purchasing.Mvc.Controllers.DepartmentalAdminRequestViewModel
 
 @{
     ViewBag.Title = "Approve";
 
 }
 
-@{
-    Bundles.Reference("css/single/jquery.multiselector.css");
-    Bundles.Reference("scripts/public/single/jquery.multiselector.js");
-}
 
-@section AdditionalScripts{
+@section AdditionalScripts
+{
+    @Scripts.Render("~/bundles/multiselector")
+    @Styles.Render("~/Css/multiselector")
  
     <script type="text/javascript">
 
