--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/_daRequest.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/_daRequest.cshtml
@@ -1,4 +1,4 @@
-﻿@model Purchasing.Web.Controllers.DepartmentalAdminRequestViewModel
+﻿@model Purchasing.Mvc.Controllers.DepartmentalAdminRequestViewModel
            
     <section class="display-form">
     <header class="ui-widget-header ui-corner-top">User Details</header>
