--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Deny.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Deny.cshtml
@@ -1,16 +1,14 @@
-﻿@model Purchasing.Web.Controllers.DepartmentalAdminRequestViewModel
+﻿@model Purchasing.Mvc.Controllers.DepartmentalAdminRequestViewModel
 
 @{
     ViewBag.Title = "Deny";
 
 }
 
-@{
-    Bundles.Reference("css/single/jquery.multiselector.css");
-    Bundles.Reference("scripts/public/single/jquery.multiselector.js");
-}
-
 @section AdditionalScripts{
+    
+    @Scripts.Render("~/bundles/multiselector")
+    @Styles.Render("~/Css/multiselector")
  
     <script type="text/javascript">
 
