Styles section. Notes, some of this css was at a special page location. that will need to be tested

--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Approve.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Approve.cshtml
@@ -5,11 +5,14 @@
 
 }
 
+@section AdditionalStyles{
+    @Styles.Render("~/Css/multiselector")
+}
 
 @section AdditionalScripts
 {
     @Scripts.Render("~/bundles/multiselector")
-    @Styles.Render("~/Css/multiselector")
+    
  
     <script type="text/javascript">
 
