--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Create.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Create.cshtml
@@ -3,12 +3,15 @@
 @{
 	ViewBag.Title = "Create";
 }
+@section AdditionalStyles{
+    @Styles.Render("~/Css/multiselector")
+}
 
 
 @section AdditionalScripts
 {
     @Scripts.Render("~/bundles/multiselector")
-    @Styles.Render("~/Css/multiselector")
+   
  
     <script type="text/javascript">
 
