--- a/Purchasing.Mvc/Views/Order/Edit.cshtml
+++ b/Purchasing.Mvc/Views/Order/Edit.cshtml
@@ -4,16 +4,13 @@
     ViewBag.Title = "Edit";
 }
 
-@{
-    Bundles.Reference("~/Css/single/fileuploader/fileuploader.css");
-    Bundles.Reference("~/Css/single/chosen.css");
-    Bundles.Reference("~/Css/single/orderrequest.css", pageLocation:"special");
-    
-    Bundles.Reference("scripts/public/order");
-}
 
+@section AdditionalStyles{
+    @Styles.Render("~/Css/order")
+}
 @section AdditionalScripts{
-    
+    @Scripts.Render("~/bundles/order")
+
     <script type="text/javascript">
 
         $(function () {
