--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Details.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Details.cshtml
@@ -5,10 +5,13 @@
 
 }
 
+@section AdditionalStyles{
+    @Styles.Render("~/Css/multiselector")
+}
 
 @section AdditionalScripts{
     @Scripts.Render("~/bundles/multiselector")
-    @Styles.Render("~/Css/multiselector")
+    
  
     <script type="text/javascript">
 
