Putting the css style in the scripts section appears to fix the issue where the "edit Line Items and Accounts" link is not styled into a button.

--- a/Purchasing.Mvc/Views/Order/Edit.cshtml
+++ b/Purchasing.Mvc/Views/Order/Edit.cshtml
@@ -5,11 +5,14 @@
 }
 
 
-@section AdditionalStyles{
-    @Styles.Render("~/Css/order")
-}
+
 @section AdditionalScripts{
     @Scripts.Render("~/bundles/order")
+
+    @Styles.Render("~/Css/single/fileuploader/fileuploader")
+    @Styles.Render("~/Css/single/chosen")
+    @Styles.Render("~/Css/single/orderrequest")
+}
 
     <script type="text/javascript">
 
