--- a/Purchasing.Mvc/Views/Order/Edit.cshtml
+++ b/Purchasing.Mvc/Views/Order/Edit.cshtml
@@ -9,9 +9,7 @@
 @section AdditionalScripts{
     @Scripts.Render("~/bundles/order")
 
-    @Styles.Render("~/Css/single/fileuploader/fileuploader")
-    @Styles.Render("~/Css/single/chosen")
-    @Styles.Render("~/Css/single/orderrequest")
+    @Styles.Render("~/Css/order") 
 }
 
     <script type="text/javascript">
