--- a/Purchasing.Mvc/Views/Order/Request.cshtml
+++ b/Purchasing.Mvc/Views/Order/Request.cshtml
@@ -7,9 +7,7 @@
 
 @section AdditionalStyles
 {
-    @Styles.Render("~/Css/single/fileuploader/fileuploader")
-    @Styles.Render("~/Css/single/chosen")
-    @Styles.Render("~/Css/single/orderrequest")
+    @Styles.Render("~/Css/order")
 }
 
 @section AdditionalScripts{
