--- a/Purchasing.Mvc/Views/Order/ReroutePurchaser.cshtml
+++ b/Purchasing.Mvc/Views/Order/ReroutePurchaser.cshtml
@@ -6,12 +6,11 @@
     ViewBag.Title = "Assign Purchaser";
     ViewBag.HideEditDialogue = true;
 }
-@{
-    Bundles.Reference("Css/single/chosen.css");    
-    Bundles.Reference("scripts/public/single/chosen.jquery.js");
+@section AdditionalStyles{
+    @Styles.Render("~/Css/single/chosen")
 }
-
 @section AdditionalScripts{
+    @Scripts.Render("~/bundles/single/chosen")
     <script type="text/javascript">
         $(document).ready(function () {
             $(".chzn-select").chosen({ no_results_text: "No results matched", search_contains: true });
