Update references from .Web. to .Mvc.

--- a/Purchasing.Mvc/Views/Search/Results.cshtml
+++ b/Purchasing.Mvc/Views/Search/Results.cshtml
@@ -1,4 +1,4 @@
-﻿@model Purchasing.Web.Controllers.SearchResultModel
+﻿@model Purchasing.Mvc.Controllers.SearchResultModel
 
 @{
     ViewBag.Title = "Search Results";
