--- a/Purchasing.Mvc/Views/ServiceMessage/Create.cshtml
+++ b/Purchasing.Mvc/Views/ServiceMessage/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Purchasing.Web.Controllers.ServiceMessageViewModel
+﻿@model Purchasing.Mvc.Controllers.ServiceMessageViewModel
 
 @{
     ViewBag.Title = "Create";
