--- a/Purchasing.Mvc/Views/Workgroup/UpdateMultipleAccounts.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/UpdateMultipleAccounts.cshtml
@@ -1,4 +1,4 @@
-﻿@model Purchasing.Web.Controllers.UpdateMultipleAccountsViewModel
+﻿@model Purchasing.Mvc.Controllers.UpdateMultipleAccountsViewModel
 
 
 @{
