--- a/Purchasing.Mvc/Views/Workgroup/WhoHasAccessToWorkgroup.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/WhoHasAccessToWorkgroup.cshtml
@@ -1,4 +1,4 @@
-﻿@model Purchasing.Web.Controllers.WhoHasWorkgroupAccessViewModel
+﻿@model Purchasing.Mvc.Controllers.WhoHasWorkgroupAccessViewModel
 
 
 @{
