--- a/Purchasing.Mvc/Views/Workgroup/Create.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/Create.cshtml
@@ -5,13 +5,10 @@
 	ViewBag.Title = "Create";
 }
 
-@{
-	Bundles.Reference("css/single/jquery.multiselector.css");
-	Bundles.Reference("scripts/public/single/jquery.multiselector.js");
-}
-
 @section AdditionalScripts
 {
+    @Styles.Render("~/Css/multiselector")
+    @Scripts.Render("~/bundles/multiselector")
 	<script type="text/javascript">
 
 		$(function () {
