--- a/Purchasing.Mvc/Views/Report/PurchaserWorkLoad.cshtml
+++ b/Purchasing.Mvc/Views/Report/PurchaserWorkLoad.cshtml
@@ -5,13 +5,14 @@
     ViewBag.SingleColumn = false;
     ViewBag.LoadTableTools = true;
     ViewBag.LoadFixedHeaders = true;
-
-    Bundles.Reference("scripts/public/single/TableTools.js");
-    Bundles.Reference("scripts/public/single/ZeroClipboard.js");
-    Bundles.Reference("scripts/public/single/RearrangeDataTable.js");
-    Bundles.Reference("scripts/public/single/FixedHeader.js");
+   
 }
 
+@section AdditionalScripts
+{
+    @Scripts.Render("~/bundles/history")
+
+}
 @section SubNav
 {
 	<ul class="navigation">
