--- a/Purchasing.Mvc/Views/Report/TotalByPrimaryOrg.cshtml
+++ b/Purchasing.Mvc/Views/Report/TotalByPrimaryOrg.cshtml
@@ -6,11 +6,13 @@
     ViewBag.SingleColumn = false;
     ViewBag.LoadTableTools = true;
     ViewBag.LoadFixedHeaders = true;
-    
-    Bundles.Reference("scripts/public/single/TableTools.js");
-    Bundles.Reference("scripts/public/single/ZeroClipboard.js");
-    Bundles.Reference("scripts/public/single/RearrangeDataTable.js");
-    Bundles.Reference("scripts/public/single/FixedHeader.js");
+    ViewBag.LoadFixedHeaders = true;
+
+}
+
+@section AdditionalScripts
+{
+    @Scripts.Render("~/bundles/history")
 
 }
 
