--- a/Purchasing.Mvc/Views/Search/Results.cshtml
+++ b/Purchasing.Mvc/Views/Search/Results.cshtml
@@ -4,12 +4,10 @@
     ViewBag.Title = "Search Results";
 }
 
-@{
-    Bundles.Reference("scripts/public/single/jquery.highlight.js");
-}
 
 @section AdditionalScripts
 {
+    @Scripts.Render("~/bundles/highlight")
     <style type="text/css">
      h2 {margin-bottom: 0px;}
     #body form {text-align: center;}
