--- a/Purchasing.Mvc/Views/Workgroup/AddPeople.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/AddPeople.cshtml
@@ -1,13 +1,11 @@
 ﻿@using Purchasing.Mvc.Models
 @model WorgroupPeopleCreateModel
 
-@{
-    Bundles.Reference("css/single/jquery.multiselector.css");
-    Bundles.Reference("scripts/public/single/jquery.multiselector.js");
-}
 
 @section AdditionalScripts
 {
+    @Styles.Render("~/Css/multiselector")
+    @Scripts.Render("~/bundles/multiselector")
     <script type="text/javascript">
 
         $(function () {
