--- a/Purchasing.Mvc/Views/Workgroup/UpdateMultipleAccounts.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/UpdateMultipleAccounts.cshtml
@@ -14,8 +14,7 @@
 }
 
 @{
-    Bundles.Reference("Scripts/public/common/jquery.qtip.js");
-    
+    @Scripts.Render("~/bundles/jquery.qtip")
     <script type="text/javascript">
         $(document).ready(function () {
             $(".showTip").qtip({
