--- a/Purchasing.Mvc/Views/Admin/ModifyDepartmental.cshtml
+++ b/Purchasing.Mvc/Views/Admin/ModifyDepartmental.cshtml
@@ -5,8 +5,9 @@
 
 }
 
-@{
-    @Styles.Render("~/Css/multiselector")
+@section AdditionalStyles
+{
+    @Styles.Render("~/Css/multiselector")    
 }
 
 @section SubNav
