--- a/Purchasing.Mvc/Views/Order/AssignAccountsPayableUser.cshtml
+++ b/Purchasing.Mvc/Views/Order/AssignAccountsPayableUser.cshtml
@@ -7,7 +7,10 @@
     ViewBag.HideEditDialogue = true;
 }
 
-@Styles.Render("~/Css/single/chosen")
+@section AdditionalStyles
+{
+    @Styles.Render("~/Css/single/chosen")
+}
 
 @section AdditionalScripts{
     @Scripts.Render("~/bundles/single/chosen")
