--- a/Purchasing.Mvc/Views/Workgroup/AddPeople.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/AddPeople.cshtml
@@ -1,10 +1,33 @@
-﻿@using Purchasing.Mvc.Models
-@model WorgroupPeopleCreateModel
+﻿@model WorgroupPeopleCreateModel
 
+@section AdditionalStyles
+{
+    @Styles.Render("~/Css/multiselector")
+
+    <style type="text/css">
+        .selector {
+            margin: 2em 0;
+        }
+
+        .selector h3 {
+            margin-bottom: .5em;
+        }
+
+        header.title {
+            border-top: 1px solid #DDDDDD;
+            border-bottom: 1px solid #DDDDDD;
+            font-size: large;
+            padding: 1em;
+        }
+
+        .ac-optionsbox ul {
+            margin-top: 10px;
+        }
+    </style>
+}
 
 @section AdditionalScripts
 {
-    @Styles.Render("~/Css/multiselector")
     @Scripts.Render("~/bundles/multiselector")
     <script type="text/javascript">
 
@@ -17,22 +40,6 @@
         })
 
     </script>
-
-    <style type="text/css">
-    
-        .selector {margin: 2em 0;}
-        .selector h3 {margin-bottom: .5em;}
-    
-        header.title
-        {
-            border-top: 1px solid #DDDDDD; 
-            border-bottom: 1px solid #DDDDDD; 
-            font-size: large; 
-            padding: 1em;
-        }
-        .ac-optionsbox ul {margin-top: 10px;}
-    
-    </style>
 }
 
 @{
