--- a/Purchasing.Mvc/Views/User/ColumnPreferences.cshtml
+++ b/Purchasing.Mvc/Views/User/ColumnPreferences.cshtml
@@ -109,6 +109,16 @@
 
                 <li>
                     <div class="editor-label">
+                        @Html.LabelFor(model => model.ShowSubStatus)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.ShowSubStatus)
+                        @Html.ValidationMessageFor(model => model.ShowSubStatus)
+                    </div>
+                </li>
+
+                <li>
+                    <div class="editor-label">
                         @Html.LabelFor(model => model.ShowApprover) 
                     </div>
                     <div class="editor-field">
@@ -300,6 +310,17 @@
                     </div>
                 </li>
                 
+                <li>
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.ShowOrderNote)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.ShowOrderNote)
+                        @Html.ValidationMessageFor(model => model.ShowOrderNote)
+                    </div>
+                </li>
+
+
                 <li>
                     <div class="editor-label">
                         @Html.LabelFor(model => model.ShowApUser) 
