Update for new columns. Need to update vOrderHistory on Azure to fully implement.

--- a/Purchasing.Mvc/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Mvc/Views/History/_OrdersTable.cshtml
@@ -250,6 +250,30 @@
         }
     }
 
+    if (Model.ColumnPreferences.ShowSubStatus)
+    {
+        if (tableHeader)
+        {
+            result.Append("<th>Poststatus</th>");
+        }
+        else
+        {
+            result.Append("<td>" + item.PostStatus + "</td>");
+        }
+    }
+
+    if (Model.ColumnPreferences.ShowOrderNote)
+    {
+        if (tableHeader)
+        {
+            result.Append("<th>Order Note</th>");
+        }
+        else
+        {
+            result.Append("<td>" + item.OrderNote + "</td>");
+        }
+    }
+    
     if(Model.ColumnPreferences.ShowNeededDate)
     {
         if(tableHeader)
