--- a/Purchasing.Mvc/Views/User/ColumnPreferences.cshtml
+++ b/Purchasing.Mvc/Views/User/ColumnPreferences.cshtml
@@ -109,11 +109,11 @@
 
                 <li>
                     <div class="editor-label">
-                        @Html.LabelFor(model => model.ShowSubStatus)
+                        @Html.LabelFor(model => model.ShowPostStatus)
                     </div>
                     <div class="editor-field">
-                        @Html.EditorFor(model => model.ShowSubStatus)
-                        @Html.ValidationMessageFor(model => model.ShowSubStatus)
+                        @Html.EditorFor(model => model.ShowPostStatus)
+                        @Html.ValidationMessageFor(model => model.ShowPostStatus)
                     </div>
                 </li>
 
