--- a/Purchasing.Mvc/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Mvc/Views/History/_OrdersTable.cshtml
@@ -250,7 +250,7 @@
         }
     }
 
-    if (Model.ColumnPreferences.ShowSubStatus)
+    if (Model.ColumnPreferences.ShowPostStatus)
     {
         if (tableHeader)
         {
