Added order note and poststatus to order review page. Added js to handle updating order note on view and updated controller to process changes.,

--- a/Purchasing.Mvc/Views/Order/Review.cshtml
+++ b/Purchasing.Mvc/Views/Order/Review.cshtml
@@ -16,7 +16,7 @@
         #order-details .col1, #order-details .col2, #kfs-section .col1, #kfs-section .col2 {width: 49.25%;vertical-align: top;text-align: left;display: inline-block;}
         #kfs-section .col1 {margin-top: 36px;padding-left: 30px;width: 46%;}
         #order-details .col1 .display-form, #order-details .col2 .display-form {height: 140px;margin-bottom: 0;}
-        #order-details .col1 ul { padding: 50px 0 0 30px; }
+        #order-details .col1 ul { padding: 0px 0 0 30px; }
         #order-details .col1 ul span, #accounts .acct-info span, #order-details .col1 ul strong, #accounts .acct-info strong, #kfs .col1 ul span {display: inline-block;vertical-align: top;}
         #order-details .col1 ul span, #kfs .col1 ul span, #kfs .col2 ul span { width: 150px; }
         #accounts .acct-info span {width: auto;min-width: 650px;}
@@ -145,6 +145,7 @@
                 UpdateReferenceNumberUrl: '@Url.Action("UpdateReferenceNumber", "Order", new {id = Model.Order.Id})',
                 UpdatePoNumberUrl: '@Url.Action("UpdatePoNumber", "Order", new {id = Model.Order.Id})',
                 UpdateTagUrl: '@Url.Action("UpdateTag", "Order", new {id = Model.Order.Id})',
+                UpdateNoteUrl: '@Url.Action("UpdateNote", "Order", new {id = Model.Order.Id})',
                 ReRouteApprovalUrl: "@Url.Action("ReRouteApproval", new {id = Model.Order.Id})",
                 FileUploadUrl: "@Url.Action("UploadFile", "Order", new {orderId = Model.Order.Id})",
                 KfsStatusUrl: '@Url.Action("GetKfsStatus", "Order", new {id = Model.Order.Id})',
