Update line item url to open in blank

--- a/Purchasing.Mvc/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewLineItems.cshtml
@@ -114,7 +114,7 @@
                                         <strong>Url:</strong>
                                         @if (validUrl)
                                         {
-                                            <a href="@line.Url">@line.Url</a>   
+                                            <a href="@line.Url" target="_blank">@line.Url</a>   
                                         }
                                         else
                                         {
