--- a/Purchasing.Mvc/Views/Order/_ReviewHistory.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewHistory.cshtml
@@ -13,7 +13,7 @@
                         <td>@tracking.DateCreated</td>
                         <td>@tracking.Description</td>
                         <td>@tracking.StatusCode.Name</td>
-                        <td>@tracking.User.FullName</td>
+                        <td>@tracking.User.FullName <a class="showTip ui-icon ui-icon-info" href="http://ucdavis.edu/search/directory_results.shtml?filter=@tracking.User.Email" target="_blank" title='Opens a new window to the campus directory performing a search for this person.'></a></td>
                     </tr>
                 }
             </tbody>
